--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.2",
     "@reduxjs/toolkit": "^1.9.1",
-    "react": "17.0.1",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.64.2",
-    "react-native-web": "^0.16.5"
+    "react-native-web": "^0.16.5",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
